jitfailure-dolfin_expression_4f52f1bdb20c002de45a1da40ea9390f/error.log
/tmp/tmpcdxxm406/dolfin_expression_4f52f1bdb20c002de45a1da40ea9390f.cpp: In member function ‘virtual void dolfin::dolfin_expression_4f52f1bdb20c002de45a1da40ea9390f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpcdxxm406/dolfin_expression_4f52f1bdb20c002de45a1da40ea9390f.cpp:61:29: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = x[0]**2;
                             ^
